--- a/kernel/netstack/Cargo.toml
+++ b/kernel/netstack/Cargo.toml
@@ -8,3 +8,4 @@ crossbeam.workspace = true
 derive_more.workspace = true
 foundation.workspace = true
 futures.workspace = true
+thiserror.workspace = true
