--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,7 @@ kernel_api = { path = "kernel/api" }
 kernel_test_framework = { path = "kernel_test_framework" }
 linked_list_allocator = "0.10.5"
 linkme = "0.3.31"
+log = "0.4.22"
 mkfs-ext2 = { git = "https://github.com/tsatke/mkfs" }
 mkfs-filesystem = { git = "https://github.com/tsatke/mkfs" }
 num_enum = { version = "0.7.0", default-features = false }
