--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -20,6 +20,7 @@ kernel_api.workspace = true
 kernel_test_framework.workspace = true
 linked_list_allocator.workspace = true
 linkme.workspace = true
+log.workspace = true
 mkfs-ext2.workspace = true
 mkfs-filesystem.workspace = true
 num_enum.workspace = true
