create initial new architecture for netstack

--- a/kernel/netstack/Cargo.toml
+++ b/kernel/netstack/Cargo.toml
@@ -8,4 +8,5 @@ crossbeam.workspace = true
 derive_more.workspace = true
 foundation.workspace = true
 futures.workspace = true
+log.workspace = true
 thiserror.workspace = true
