force a toolchain version until https://github.com/rust-osdev/x86_64/pull/513 is merged and x2apic releases a new version that uses the fix

--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,5 +1,5 @@
 [toolchain]
-channel = "nightly"
+channel = "nightly-2024-11-11"
 components = ["rustfmt", "clippy", "llvm-tools-preview", "rust-src", "miri"]
 profile = "default"
 targets = ["x86_64-unknown-none"]
