init lapic and ioapic, and catch all interrupts

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,6 +64,7 @@ mkfs-filesystem = { git = "https://github.com/tsatke/mkfs" }
 netstack = { path = "kernel/netstack" }
 num_enum = { version = "0.7.0", default-features = false }
 raw-cpuid = { version = "11.0", default-features = false }
+seq-macro = "0.3.5"
 spin = "0.9.8"
 thiserror = { version = "2.0.3", default-features = false }
 uart_16550 = "0.3"
