--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -8,5 +8,6 @@ rustflags = [
     "-C", "link-arg=-z",
     "-C", "link-arg=nostart-stop-gc",
     "-C", "force-frame-pointers=yes",
+    "-C", "relocation-model=static",
     "-g"
 ]
