--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,17 @@ name = "devos"
 version = "0.1.0"
 edition = "2024"
 
-[dependencies]
+[build-dependencies]
+kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none", default-features = false }
+ovmf-prebuilt = "0.2.1"
+
+[workspace]
+members = [
+    "kernel",
+]
+default-members = [
+    ".",
+]
+
+[workspace.dependencies]
+limine = "0.3.1"
