add logging over serial
introduce hal crate

add gdt initialization

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -4,4 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+conquer-once.workspace = true
 limine.workspace = true
+log.workspace = true
+seq-macro.workspace = true
+spin.workspace = true
+uart_16550.workspace = true
+x86_64.workspace = true
