--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ default-members = [
 [workspace.dependencies]
 conquer-once = { version = "0.4", default-features = false }
 limine = "0.3.1"
+linked_list_allocator = "0.10"
 log = "0.4"
 seq-macro = "0.3"
 spin = "0.9"
