--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,9 @@ default-members = [
     ".",
 ]
 
+[dependencies]
+clap = { version = "4.5", features = ["derive"] }
+
 [workspace.dependencies]
 conquer-once = { version = "0.4", default-features = false }
 derive_more = { version = "1.0.0", default-features = false, features = ["constructor"] }
