rename boot option

--- a/limine.conf
+++ b/limine.conf
@@ -4,9 +4,6 @@ serial: no
 verbose: no
 
 # The entry name that will be displayed in the boot menu.
-/Limine Template
-    # We use the Limine boot protocol.
+/DevOS
     protocol: limine
-
-    # Path to the kernel to boot. boot():/ represents the partition on which limine.conf is located.
     kernel_path: boot():/boot/kernel
