add a virtual memory manager with tests

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+virtual_memory_manager = { path = "crates/virtual_memory_manager" }
+
 conquer-once.workspace = true
 derive_more.workspace = true
 limine.workspace = true
