--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,11 @@ ovmf-prebuilt = "0.2.1"
 [workspace]
 members = [
     "kernel",
+    "kernel/crates/virtual_memory_manager",
 ]
 default-members = [
     ".",
+    "kernel/crates/virtual_memory_manager",
 ]
 
 [dependencies]
