--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -8,6 +8,7 @@ rustflags = [
     "-C", "link-arg=-z",
     "-C", "link-arg=nostart-stop-gc",
     "-C", "force-frame-pointers=yes",
+    "-C", "force-unwind-tables=yes",
     "-C", "relocation-model=static",
     "-g"
 ]
