--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 virtual_memory_manager = { path = "crates/virtual_memory_manager" }
 
+acpi.workspace = true
 conquer-once.workspace = true
 derive_more.workspace = true
 limine.workspace = true
