--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ clap = { version = "4.5", features = ["derive"] }
 
 [workspace.dependencies]
 acpi = "5.1"
+bitfield = "0.19"
 conquer-once = { version = "0.4", default-features = false }
 derive_more = { version = "1.0.0", default-features = false, features = ["constructor"] }
 limine = "0.3.1"
@@ -31,4 +32,5 @@ seq-macro = "0.3"
 spin = "0.9"
 thiserror = { version = "2.0", default-features = false }
 uart_16550 = "0.3"
+volatile = { version = "0.6", features = ["derive"] }
 x86_64 = "0.15"
