add a 2 stage heap approach (is faster for more heap) and make pedantic clippy happy

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,12 @@ ovmf-prebuilt = "0.2.1"
 members = [
     "kernel",
     "kernel/crates/virtual_memory_manager",
+    "kernel/crates/physical_memory_manager",
 ]
 default-members = [
     ".",
     "kernel/crates/virtual_memory_manager",
+    "kernel/crates/physical_memory_manager",
 ]
 
 [dependencies]
