--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ clap = { version = "4.5", features = ["derive"] }
 acpi = "5.2"
 bitfield = "0.19"
 conquer-once = { version = "0.4", default-features = false }
+cordyceps = { version = "0.3", default-features = false, features = ["alloc"] }
 derive_more = { version = "1.0.0", default-features = false, features = ["constructor"] }
 jiff = { version = "0.2", default-features = false, features = ["alloc"] }
 limine = "0.4"
