configure an ioapic and lapics and use the timer interrupts for scheduling

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,4 +37,5 @@ spin = "0.9"
 thiserror = { version = "2.0", default-features = false }
 uart_16550 = "0.3"
 volatile = { version = "0.6", features = ["derive"] }
+x2apic = "0.5"
 x86_64 = "0.15"
