--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -21,4 +21,5 @@ spin.workspace = true
 thiserror.workspace = true
 uart_16550.workspace = true
 volatile.workspace = true
+x2apic.workspace = true
 x86_64.workspace = true
