--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,15 +25,15 @@ clap = { version = "4.5", features = ["derive"] }
 [workspace.dependencies]
 acpi = "5.2"
 bitfield = "0.19"
+bitflags = "2.9"
 conquer-once = { version = "0.4", default-features = false }
 cordyceps = { version = "0.3", default-features = false, features = ["alloc"] }
-derive_more = { version = "1.0.0", default-features = false, features = ["constructor"] }
 jiff = { version = "0.2", default-features = false, features = ["alloc"] }
 limine = "0.4"
 linked_list_allocator = "0.10"
+linkme = "0.3"
 log = "0.4"
-seq-macro = "0.3"
-spin = "0.9"
+spin = "0.10"
 thiserror = { version = "2.0", default-features = false }
 uart_16550 = "0.3"
 volatile = { version = "0.6", features = ["derive"] }
