add a small Path implementation as preparation for a VFS

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,6 +59,7 @@ jobs:
     strategy:
       matrix:
         package:
+          - foundation
           - physical_memory_manager
           - virtual_memory_manager
     steps:
