rename foundation crate to vfs

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,7 +59,7 @@ jobs:
     strategy:
       matrix:
         package:
-          - foundation
+          - vfs
           - physical_memory_manager
           - virtual_memory_manager
     steps:
