--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-foundation = { path = "crates/foundation" }
 physical_memory_manager = { path = "crates/physical_memory_manager" }
+vfs = { path = "crates/vfs" }
 virtual_memory_manager = { path = "crates/virtual_memory_manager" }
 
 acpi.workspace = true
