print stack traces on panic

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -13,11 +13,13 @@ bitfield.workspace = true
 bitflags.workspace = true
 conquer-once.workspace = true
 cordyceps.workspace = true
+elf.workspace = true
 jiff.workspace = true
 limine.workspace = true
 linked_list_allocator.workspace = true
 linkme.workspace = true
 log.workspace = true
+rustc-demangle.workspace = true
 spin.workspace = true
 thiserror.workspace = true
 uart_16550.workspace = true
