--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,11 +30,13 @@ bitfield = "0.19"
 bitflags = "2.9"
 conquer-once = { version = "0.4", default-features = false }
 cordyceps = { version = "0.3", default-features = false, features = ["alloc"] }
+elf = { version = "0.7", default-features = false, features = ["nightly"] }
 jiff = { version = "0.2", default-features = false, features = ["alloc"] }
 limine = "0.4"
 linked_list_allocator = "0.10"
 linkme = "0.3"
 log = "0.4"
+rustc-demangle = "0.1"
 spin = "0.10"
 thiserror = { version = "2.0", default-features = false }
 uart_16550 = "0.3"
