--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ rustc-demangle = "0.1"
 spin = "0.10"
 thiserror = { version = "2.0", default-features = false }
 uart_16550 = "0.3"
+virtio-drivers = "0.9"
 volatile = { version = "0.6", features = ["derive"] }
 x2apic = "0.5"
 x86_64 = "0.15"
