add basic support for reading through vfs

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,4 +13,4 @@ updates:
     ignore:
       # These are peer deps of Cargo and should not be automatically bumped
       - dependency-name: "semver"
-      - dependency-name: "crates-io"
+      - dependency-name: "crates-vfs"
