--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -19,6 +19,8 @@ limine.workspace = true
 linked_list_allocator.workspace = true
 linkme.workspace = true
 log.workspace = true
+mkfs-ext2.workspace = true
+mkfs-filesystem.workspace = true
 rustc-demangle.workspace = true
 spin.workspace = true
 thiserror.workspace = true
