--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [build-dependencies]
-kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none", default-features = false }
 ovmf-prebuilt = "0.2.2"
+
+kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
+
+sandbox = { path = "userspace/sandbox", artifact = "bin", target = "x86_64-unknown-none" }
 
 [workspace]
 members = [
@@ -13,6 +16,7 @@ members = [
     "kernel/crates/virtual_memory_manager",
     "kernel/crates/vfs",
     "kernel/crates/physical_memory_manager",
+    "userspace/sandbox",
 ]
 default-members = [
     ".",
@@ -36,6 +40,8 @@ limine = "0.4"
 linked_list_allocator = "0.10"
 linkme = "0.3"
 log = "0.4"
+mkfs-ext2 = { git = "https://github.com/tsatke/mkfs" }
+mkfs-filesystem = { git = "https://github.com/tsatke/mkfs" }
 rustc-demangle = "0.1"
 spin = "0.10"
 thiserror = { version = "2.0", default-features = false }
