--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ clap = { version = "4.5", features = ["derive"] }
 
 [workspace.dependencies]
 acpi = "5.2"
+addr2line = { version = "0.24", default-features = false, features = ["fallible-iterator", "rustc-demangle"] }
 bitfield = "0.19"
 bitflags = "2.9"
 conquer-once = { version = "0.4", default-features = false }
