fix remapping not working for huge pages that cross region boundaries
Also some elf stuff that I can't be bothered to move out of this commit

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -16,7 +16,7 @@ bitflags.workspace = true
 conquer-once.workspace = true
 cordyceps.workspace = true
 elf.workspace = true
-elf_loader.workspace = true
+elfloader.workspace = true
 jiff.workspace = true
 limine.workspace = true
 linked_list_allocator.workspace = true
