--- a/kernel/crates/kernel_elfloader/Cargo.toml
+++ b/kernel/crates/kernel_elfloader/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+kernel_memapi = { path = "../kernel_memapi" }
+
+itertools.workspace = true
 thiserror.workspace = true
 x86_64.workspace = true
 zerocopy.workspace = true
+log = "0.4.27"
