--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,14 @@ ovmf-prebuilt = "0.2.3"
 
 kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
 
-#sandbox = { path = "userspace/sandbox", artifact = "bin", target = "x86_64-unknown-none" }
+sandbox = { path = "userspace/sandbox", artifact = "bin", target = "x86_64-unknown-none" }
 
 [workspace]
 members = [
     "kernel",
     "kernel/crates/device",
     "kernel/crates/kernel_elfloader",
+    "kernel/crates/kernel_memapi",
     "kernel/crates/physical_memory_manager",
     "kernel/crates/vfs",
     "kernel/crates/virtual_memory_manager",
@@ -24,6 +25,7 @@ default-members = [
     ".",
     "kernel/crates/device",
     "kernel/crates/kernel_elfloader",
+    "kernel/crates/kernel_memapi",
     "kernel/crates/physical_memory_manager",
     "kernel/crates/vfs",
     "kernel/crates/virtual_memory_manager",
@@ -39,8 +41,9 @@ bitfield = "0.19"
 bitflags = "2.9"
 conquer-once = { version = "0.4", default-features = false }
 cordyceps = { version = "0.3", default-features = false, features = ["alloc"] }
+raw-cpuid = "11"
 elf = { version = "0.7", default-features = false, features = ["nightly"] }
-elfloader = { version = "0.16" }
+itertools = { version = "0.14.0", default-features = false, features = ["use_alloc"] }
 jiff = { version = "0.2", default-features = false, features = ["alloc"] }
 limine = "0.4"
 linked_list_allocator = "0.10"
@@ -49,6 +52,7 @@ log = "0.4"
 mkfs-ext2 = { git = "https://github.com/tsatke/mkfs" }
 mkfs-filesystem = { git = "https://github.com/tsatke/mkfs" }
 rustc-demangle = "0.1"
+sha3 = { version = "0.11.0-pre.5", default-features = false }
 spin = "0.10"
 thiserror = { version = "2.0", default-features = false }
 uart_16550 = "0.3"
