--- a/limine.conf
+++ b/limine.conf
@@ -4,6 +4,6 @@ serial: no
 verbose: no
 
 # The entry name that will be displayed in the boot menu.
-/DevOS
+/MuffinOS
     protocol: limine
     kernel_path: boot():/boot/kernel
