temporarily disable tests for muffin_libc
Building tests seems to use the declared functions
for linkage, which is not what we want in a test.
We have to find out how we can properly test libc
once we're at that point.

--- a/platform/muffin_libc/Cargo.toml
+++ b/platform/muffin_libc/Cargo.toml
@@ -3,6 +3,9 @@ name = "muffin_libc"
 version = "0.1.0"
 edition = "2024"
 
+[lib]
+test = false
+
 [dependencies]
 muffin_libc_spec_comment = { path = "muffin_libc_spec_comment" }
 
