implement sys_getcwd

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,11 @@
 name: Rust
 
 on:
-  push:
-  pull_request:
+  #  push:
+  #  pull_request:
   workflow_dispatch:
-  schedule:
-    - cron: 0 5,17 * * *
+  #  schedule:
+  #    - cron: 0 5,17 * * *
 
 env:
   CARGO_TERM_COLOR: always
@@ -52,9 +52,7 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -y xorriso
-        if: false
       - name: Test
-        if: false
         run: |
           cargo test $(if [[ "${{ matrix.strategy }}" == "release" ]]; then echo "--release"; fi)
 
@@ -74,11 +72,9 @@ jobs:
         with:
           toolchain: nightly
       - name: Miri Setup
-        if: false
         run: |
           cargo miri setup
       - name: Miri
-        if: false
         run: |
           cargo miri test -p ${{ matrix.package }}
   
@@ -97,12 +93,10 @@ jobs:
         with:
           toolchain: nightly
       - name: Install dependencies
-        if: false
         run: |
           sudo apt update
           sudo apt install -y xorriso
       - name: Build
-        if: false
         run: |
           cargo build --release
       - uses: actions/upload-artifact@v4
