--- a/userspace/libmuffin/Cargo.toml
+++ b/userspace/libmuffin/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [lib]
 name = "muffin"
 crate-type = ["staticlib"]
+test = false
 
 [dependencies]
 kernel_abi = { path = "../../kernel/crates/kernel_abi" }
