implement basic functionality for sys_open, sys_read and sys_write

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,10 @@ default-run = "muffinos"
 ovmf-prebuilt = "0.2.3"
 file_structure = { path = "userspace/file_structure" }
 
-kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
+kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none", features = ["backtrace"] }
 
 sandbox = { path = "userspace/sandbox", artifact = "bin", target = "x86_64-unknown-muffin" }
+sandbox_nostd = { path = "userspace/sandbox_nostd", artifact = "bin", target = "x86_64-unknown-muffin" }
 
 [workspace]
 members = [
@@ -27,6 +28,7 @@ members = [
     "userspace/file_structure",
     "userspace/libmuffin",
     "userspace/sandbox",
+    "userspace/sandbox_nostd",
 ]
 default-members = [
     ".",
@@ -39,7 +41,6 @@ default-members = [
     "kernel/crates/physical_memory_manager",
     "kernel/crates/virtual_memory_manager",
     "userspace/file_structure",
-    "userspace/libmuffin",
     "userspace/sandbox",
 ]
 
