--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -38,6 +38,7 @@ virtio-drivers.workspace = true
 volatile.workspace = true
 x2apic.workspace = true
 x86_64.workspace = true
+zerocopy.workspace = true
 
 [features]
 default = []
