--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -9,7 +9,7 @@ kernel_device = { path = "crates/kernel_device" }
 kernel_elfloader = { path = "crates/kernel_elfloader" }
 kernel_memapi = { path = "crates/kernel_memapi" }
 kernel_syscall = { path = "crates/kernel_syscall" }
-physical_memory_manager = { path = "crates/physical_memory_manager" }
+kernel_physical_memory = { path = "crates/kernel_physical_memory" }
 kernel_vfs = { path = "crates/kernel_vfs" }
 virtual_memory_manager = { path = "crates/virtual_memory_manager" }
 
