--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 kernel_abi = { path = "crates/kernel_abi" }
+kernel_devfs = { path = "crates/kernel_devfs" }
 kernel_device = { path = "crates/kernel_device" }
 kernel_elfloader = { path = "crates/kernel_elfloader" }
 kernel_memapi = { path = "crates/kernel_memapi" }
