move pci stuff to kernel_pci

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -9,8 +9,9 @@ kernel_devfs = { path = "crates/kernel_devfs" }
 kernel_device = { path = "crates/kernel_device" }
 kernel_elfloader = { path = "crates/kernel_elfloader" }
 kernel_memapi = { path = "crates/kernel_memapi" }
-kernel_syscall = { path = "crates/kernel_syscall" }
+kernel_pci = { path = "crates/kernel_pci" }
 kernel_physical_memory = { path = "crates/kernel_physical_memory" }
+kernel_syscall = { path = "crates/kernel_syscall" }
 kernel_vfs = { path = "crates/kernel_vfs" }
 kernel_virtual_memory = { path = "crates/kernel_virtual_memory" }
 
