--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ file_structure = { path = "userspace/file_structure" }
 
 kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
 
+init = { path = "userspace/init", artifact = "bin", target = "x86_64-unknown-muffin" }
 sandbox = { path = "userspace/sandbox", artifact = "bin", target = "x86_64-unknown-muffin" }
 sandbox_nostd = { path = "userspace/sandbox_nostd", artifact = "bin", target = "x86_64-unknown-muffin" }
 
@@ -28,6 +29,7 @@ members = [
     "kernel/crates/kernel_vfs",
     "kernel/crates/kernel_virtual_memory",
     "userspace/file_structure",
+    "userspace/init",
     "userspace/libmuffin",
     "userspace/sandbox",
     "userspace/sandbox_nostd",
