--- a/kernel/crates/kernel_virtual_memory/Cargo.toml
+++ b/kernel/crates/kernel_virtual_memory/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+log.workspace = true
 thiserror.workspace = true
 x86_64.workspace = true
-log = "0.4.27"
